tests/test_proof/bad/rationals-overlap.catala_en
## Test

```catala
declaration scope A:
  context x content decimal
  context y content boolean

scope A:
  definition x equals 1.
  definition y under condition x >= 1./3. consequence equals true
  definition y under condition x <= 1./3. consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/rationals-overlap.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
[ERROR] [A.y] At least two exceptions overlap for this variable:
┌─⯈ tests/test_proof/bad/rationals-overlap.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
